Fix border of selected card overlapping neighbor
See https://github.com/c-w/boardgames/issues/9

--- a/src/frontend/boards/fitf/index.scss
+++ b/src/frontend/boards/fitf/index.scss
@@ -663,6 +663,16 @@ $black: #000;
         }
       }
     }
+
+    .hand {
+      @for $i from 1 through 13 {
+        li:nth-child(#{$i}) {
+          .card {
+            z-index: 14-$i;
+          }
+        }
+      }
+    }
   }
 
   &.android {
